--- a/style1.css
+++ b/style1.css
@@ -148,7 +148,7 @@ h1 {
   line-height: 1.5;
   /* margin: 10px 50px 50px 50px; */
 }
-
+/*tes*/
 @media (max-width: 768px) {
   .hero{
     max-width: 100%;
