--- a/style1.css
+++ b/style1.css
@@ -142,7 +142,7 @@ h1 {
   overflow: hidden;
   text-align: justify;
   max-width: 900px;
-  margin: 20px auto 35px auto;
+  margin: 20px auto 40px auto;
   padding: 0 40px;
   /* display: inline-block ; */
   line-height: 1.5;
@@ -158,7 +158,7 @@ h1 {
   .typing {
     max-width: 100%;
     margin: 20px 20px; 
-    padding: 0;         
+    padding:0 0 20px 0;
   }
 }
 .footer{
